# PEAK-Assistant

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_AUTHENTICATION.md  Dockerfile  MODEL_CONFIGURATION.md  Makefile  README.md  SECURITY.md  docker-startup.sh  generate_certificates.sh  mcp_servers.json.example  model_config.json.example  pyproject.toml  requirements.txt  test_mcp_integration.py  test_minimal_config.py  test_oauth_discovery.py  test_zero_config_oauth.py
.github/workflows/: build_container.yml
UI/: README.md  README_FLASK.md  __main__.py  app.py  app_flask.py  app_original.py  context.txt
UI/app/: config.py  factory.py
UI/app/models/: __init__.py
UI/app/routes/: __init__.py  api_routes.py  oauth_routes.py  page_routes.py  upload_routes.py
UI/app/services/: __init__.py
UI/app/utils/: decorators.py  helpers.py
UI/static/css/: components.css  layout.css  theme.css  utilities.css  variables.css
UI/static/js/: api-client.js  auth.js  content-renderer.js  download-manager.js  main.js  phase-manager.js  theme-manager.js  ui-feedback.js
UI/templates/: able_table.html  base.html  data_discovery.html  debug.html  help.html  hunt_planning.html  hypothesis.html  index.html  refinement.html  research.html  research_fixed.html  research_plan.html
able_assistant/: __init__.py  __main__.py  able_assistant_cli.py
autogen/: peak-research.service  run_endpoint.py
autogen/hypothesis_assistant/: hypothesis_refiner_cli.py
autogen/research_assistant/: research_assistant_autogen.py  research_assistant_cli.py
data_assistant/: __init__.py  __main__.py  data_asssistant_cli.py
evaluations/: README.md
evaluations/hunt-plan-eval/: README.md  hunt_plan_evaluator.py  model_config.json.example
evaluations/hypothesis-eval/: README.md  hypothesis_evaluator.py  model_config.json.example
evaluations/research-agent-team-eval/: README.md  evaluator.py  generate-reports.py  model_config.json.example
evaluations/utils/: README.md  __init__.py  env_loader.py  eval_model_client.py  output_helpers.py
hypothesis_assistant/: __init__.py  hypothesis_assistant_cli.py  hypothesis_refiner_cli.py
instance/: peak_assistant.db
mcp/: peak_assistant_mcp.py
peak_assistant/UI/: __main__.py
peak_assistant/UI/app/: __init__.py  config.py  factory.py
peak_assistant/UI/app/routes/: api_routes.py  oauth_routes.py  page_routes.py  upload_routes.py
peak_assistant/UI/app/templates/components/: mcp_status.html
peak_assistant/UI/app/utils/: __init__.py  decorators.py
peak_assistant/UI/static/css/: navigation.css  theme.css  variables.css
peak_assistant/UI/static/js/: api-client.js  auth.js  feedback-handler.js  main.js
peak_assistant/UI/templates/: base.html  debug.html  hunt_planning.html  hypothesis.html  research.html  user_id_input.html
peak_assistant/able_assistant/: __init__.py  __main__.py
peak_assistant/data_assistant/: __init__.py  __main__.py
peak_assistant/hypothesis_assistant/: __init__.py  hypothesis_assistant_cli.py  hypothesis_refiner_cli.py
peak_assistant/mcp_status/: __init__.py  __main__.py
peak_assistant/peak_mcp/: __main__.py
peak_assistant/planning_assistant/: __init__.py  __main__.py
peak_assistant/research_assistant/: __init__.py  __main__.py  local_data_search_cli.py
peak_assistant/streamlit/: __main__.py  app.py
peak_assistant/streamlit/.streamlit/: config.toml
peak_assistant/streamlit/util/: __init__.py  helpers.py  hypothesis_helpers.py  runners.py  ui.py
peak_assistant/utils/: __init__.py  agent_callbacks.py  assistant_auth.py  authlib_oauth.py  azure_client.py  environment.py  llm_factory.py  mcp_config.py  model_config_loader.py  result_extractors.py  validate_config.py
peak_mcp/: __main__.py
planning_assistant/: __init__.py  __main__.py  planning_assistant_cli.py
research_assistant/: __init__.py  __main__.py  peak-research.service  research_assistant.py  research_assistant_cli.py
scripts/: README.md  docker_create_manifest_list.py  validate_model_config.py
tests/: test_able_table.py  test_azure_client.py  test_data_assistant.py  test_mcp_integration.py  test_minimal_config.py  test_oauth_discovery.py  test_utils.py  test_zero_config_oauth.py
tests/hunt-plan-eval/: hunt_plan_evaluator.py
tests/integration/: README.md  test_azure_live.py  test_azure_reasoning_live.py  test_full_workflow.py  test_live_all_providers.py  test_live_optional_params.py  test_mcp_config_integration.py  test_mcp_full_workflow.py  test_openai_base_url_live.py  test_openai_live.py  test_openai_reasoning_base_url_live.py  test_streamlit_workflow.py  test_validate_config_command.py
tests/integration_tests/: test_mcp_status_command.py
tests/research-agent-team-eval/: evaluator.py  generate-reports.py
tests/unit_tests/: test_chat_history_conversion.py  test_mcp_config_streamlit_detection.py  test_mcp_oauth_env_vars.py  test_mcp_status_auth_check.py  test_mcp_stdio_timeout.py  test_oauth_session_storage.py  test_oauth_url_validation.py  test_streamlit_helpers_mcp_bugs.py
tests/utils/: test_find_dotenv_file.py  test_llm_factory.py  test_mcp_config_classes.py  test_model_config.py
utils/: __init__.py  agent_callbacks.py  assistant_auth.py  authlib_oauth.py  azure_client.py  mcp_config.py
