[project]
name = "PEAK-assistant"
version = "0.1.0"
description = "An AI-powered threat hunting assistant designed to help cybersecurity professionals generate, refine, and document threat hunting hypotheses and research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-session>=0.8.0",
    "flask==2.3.2",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.1.1",
    "markdown-pdf>=1.7",
    "openai>=1.98.0",
    "markdown>=3.8.2",
    "fpdf>=1.7.2",
    "gunicorn>=21.0.0",
    "tavily-python>=0.7.10",
    "autogen>=0.9.7",
    "autogen-agentchat>=0.7.1",
    "autogen-ext>=0.7.1",
    "dotenv>=0.9.9",
    "mcp>=1.12.2",
    "pydantic>=2.11.7",
    "aiohttp>=3.12.15",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
    "coverage>=7.10.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "UI",
    "peak_mcp",
    "research_assistant",
    "hypothesis_assistant",
    "able_assistant",
    "data_assistant",
    "utils",
]

[project.scripts]
able-assistant = "able_assistant.__main__:main"
data-assistant = "data_assistant.__main__:main"
hypothesis-assistant = "hypothesis_assistant.hypothesis_assistant_cli:main"
hypothesis-refiner = "hypothesis_assistant.hypothesis_refiner_cli:main"
planning-assistant = "planning_assistant.__main__:main"
peak-mcp = "peak_mcp.__main__:main"
peak-assistant = "UI.__main__:main"
research-assistant = "research_assistant.__main__:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
