# Copyright (c) 2025 Cisco Systems, Inc. and its affiliates
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#
# SPDX-License-Identifier: MIT

[project]
name = "PEAK-assistant"
version = "0.1.0"
description = "An AI-powered threat hunting assistant designed to help cybersecurity professionals generate, refine, and document threat hunting hypotheses and research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "markdown-pdf>=1.7",
    "openai>=1.98.0",
    "markdown>=3.8.2",
    "fpdf>=1.7.2",
    "tavily-python>=0.7.10",
    "autogen>=0.9.7",
    "autogen-agentchat>=0.7.1",
    "autogen-ext>=0.7.1",
    "dotenv>=0.9.9",
    "mcp>=1.12.2",
    "pydantic>=2.11.7",
    "aiohttp>=3.12.15",
    "httpx>=0.28.1",
    "click>=8.2.1",
    "streamlit>=1.49.1",
    "streamlit-option-menu>=0.4.0",
    "watchdog>=6.0.0",
    "streamlit-extras>=0.7.8",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
    "coverage>=7.10.1",
    "anthropic>=0.64.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["peak_assistant"]

[project.scripts]
able-assistant = "peak_assistant.able_assistant.__main__:main"
data-assistant = "peak_assistant.data_assistant.__main__:main"
hypothesis-assistant = "peak_assistant.hypothesis_assistant.hypothesis_assistant_cli:main"
hypothesis-refiner = "peak_assistant.hypothesis_assistant.hypothesis_refiner_cli:main"
mcp-status = "peak_assistant.mcp_status.__main__:main"
planning-assistant = "peak_assistant.planning_assistant.__main__:main"
peak-mcp = "peak_assistant.peak_mcp.__main__:main"
peak-assistant = "peak_assistant.streamlit.__main__:main"
research-assistant = "peak_assistant.research_assistant.__main__:main"
validate-config = "peak_assistant.utils.validate_config:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests that call external LLM APIs (deselect with '-m \"not live\"')",
]
